--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 
 title: Electron - Development Blog
 email: nitingoswami473@gmail.com
-description: >- # this means to ignore newlines until "baseurl:"
+description: >-
 
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://electron.iamharsh.design/" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: ""
+url: "https://electron.iamharsh.design/"
 
 github_username:  theuitown
 remote_theme: b2a3e8/jekyll-theme-console
