--- a/admin/config.yml
+++ b/admin/config.yml
@@ -4,15 +4,18 @@ backend:
   api_root: https://api.github.com
   auth_endpoint: auth
   branch: master
+  open_authoring: true
 media_folder: 'assets/uploads'
+publish_mode: editorial_workflow
 collections:
   - name: 'blog'
     label: 'Blog'
     folder: '_posts/'
     create: true
     slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
+    preview_path: https://electron.iamharsh.design/{{slug}}
     editor:
-      preview: false
+      preview: true
     fields:
       - { label: 'Layout', name: 'layout', widget: 'hidden', default: 'post' }
       - { label: 'Title', name: 'title', widget: 'string' }
@@ -32,7 +35,7 @@ collections:
     folder: '_authors/'
     create: true
     editor:
-      preview: false
+      preview: true
     fields:
       - { label: 'Layout', name: 'layout', widget: 'hidden', default: 'author' }
       - { label: 'Short Name', name: 'name', widget: 'string' }
