--- a/admin/config.yml
+++ b/admin/config.yml
@@ -15,7 +15,7 @@ collections:
     slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
     preview_path: https://electron.iamharsh.design/{{slug}}
     editor:
-      preview: true
+      preview: false
     fields:
       - { label: 'Layout', name: 'layout', widget: 'hidden', default: 'post' }
       - { label: 'Title', name: 'title', widget: 'string' }
@@ -34,6 +34,7 @@ collections:
     label: 'Authors'
     folder: '_authors/'
     create: true
+    slug: '{{[display_name]}}'
     editor:
       preview: true
     fields:
