--- a/admin/config.yml
+++ b/admin/config.yml
@@ -13,7 +13,6 @@ collections:
     folder: '_posts/'
     create: true
     slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
-    preview_path: https://electron.iamharsh.design/{{slug}}
     editor:
       preview: false
     fields:
@@ -36,12 +35,14 @@ collections:
     create: true
     slug: '{{[display_name]}}'
     editor:
-      preview: true
+      preview: false
     fields:
       - { label: 'Layout', name: 'layout', widget: 'hidden', default: 'author' }
       - { label: 'Short Name', name: 'name', widget: 'string' }
       - { label: 'Diplay Name', name: 'display_name', widget: 'string' }
       - { label: 'Position', name: 'position', widget: 'string' }
+      - { label: 'Instagram Url', name: 'instaurl', widget: 'string' }
+      - { label: 'Github Url', name: 'giturl', widget: 'string' }
       - { label: 'Body', name: 'body', widget: 'markdown' }
 
   - name: 'pages'
