--- a/admin/config.yml
+++ b/admin/config.yml
@@ -18,6 +18,7 @@ collections:
     fields:
       - { label: 'Layout', name: 'layout', widget: 'hidden', default: 'post' }
       - { label: 'Title', name: 'title', widget: 'string' }
+      - { label: 'Feature Image', name: 'postimg', widget: 'image' }
       - { label: 'Publish Date', name: 'date', widget: 'datetime' }
       - {
           label: 'Author',
