--- a/admin/config.yml
+++ b/admin/config.yml
@@ -7,6 +7,8 @@ backend:
   open_authoring: true
 media_folder: 'assets/uploads'
 publish_mode: editorial_workflow
+show_preview_links: true
+
 collections:
   - name: 'blog'
     label: 'Blog'
@@ -21,7 +23,7 @@ collections:
       - { label: 'Title', name: 'title', widget: 'string' }
       - { label: 'Feature Image', name: 'postimg', widget: 'image' }
       - { label: 'Publish Date', name: 'date', widget: 'datetime' }
-      - { label: 'Category', name: 'category', widget: 'string' }
+      - { label: 'Category', name: 'category', widget: 'list' }
       - {
           label: 'Author',
           name: 'author',
